--- a/madlibs.html
+++ b/madlibs.html
@@ -12,10 +12,10 @@ adjective = prompt("Give me an adjective");
 verb = prompt("Give me a verb");
 adverb = prompt("Give me an adverb");
 
-var nounAnswer = parseInt(noun);
-var adjectiveAnswer = parseInt(adjective);
-var verbAnswer = parseInt(verb);
-var adverbAnswer = parseInt(adverb);
+var nounAnswer = (noun);
+var adjectiveAnswer = (adjective);
+var verbAnswer = (verb);
+var adverbAnswer = (adverb);
 
 console.log("On a" + adjectiveAnswer + "island,\n"  + adverbAnswer + "a molten lava moon.\n" + verbAnswer + "with the hula\n" + nounAnswer + ", Askin' questions cause they got all the answers.");
 
